--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   http: ^0.13.4
   flutter_svg: ^1.1.1+1
   page_transition: ^2.0.9
+  encrypt: ^5.0.1
 
 dev_dependencies:
   flutter_test:
